Fix Progress spiner not centered at screen (all windows) #122

--- a/src/app/views/user/user-login/user-login.component.css
+++ b/src/app/views/user/user-login/user-login.component.css
@@ -11,12 +11,12 @@ mat-form-field {
 }
 
 .loading-indicator {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* grid-row: 1;
-  grid-column-start: 2;
-  grid-column-end: 2; */
+  position: absolute;
+  left: 35%;
+  top: 45%;
+  z-index: 1;
+  width: 120px;
+  height: 120px;
 }
 
 .space {
